cabal-version:       2.4
name:                hSlew
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/timput/hSlew
bug-reports:         https://github.com/timput/hSlew/issues
license:             GPL-3.0-only
license-file:        LICENSE
author:              tim put
maintainer:          tim put <timput@gmail.com>
copyright:           2021 tim put
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.4

source-repository head
  type:                git
  location:            https://github.com/timput/hSlew.git

common common-options
  build-depends:       base ^>= 4.14.0.0
                     , tomland
                     , text
                     , parallel
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     HSlew

executable hSlew
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       hSlew
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite hSlew-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       hSlew
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark hSlew-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , hSlew
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
